# wndkit

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  app.manifest  basic_example.cpp
include/wndkit/: commctrl_subclass_dispatcher.hpp  dispatcher.hpp  message_filters.hpp  message_handler.hpp  message_params.hpp  subclass_dispatcher.hpp
include/wndkit/details/: message_traits.hpp  notify_traits.hpp
include/wndkit/widgets/: box_layout.hpp  hbox_layout.hpp  hyperlink.hpp  layout.hpp  main_window.hpp  top_level_window.hpp  vbox_layout.hpp  web_view.hpp
